[package]
name = "interust"
authors = ["Choi Han-Gyeol <hangoil65@gmail.com>"]
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustc-hash = "2.0.0"
winapi = { version = "0.3.9", features = ["consoleapi"] }